--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -99,11 +99,11 @@ switches/.cd,
 }
 \gdef\tighten@paragraph@solutions{%
 \if\exbank@opt@tightenparagraphs\@isTrue\relax%
-  \if\@SolutionsOnly\@isFalse
+  % \if\@SolutionsOnly\@isFalse
     \if\@DisplaySolutions\@isTrue
       \filbreak%
     \fi
-  \fi
+  % \fi
 \fi%
 }
 \gdef\tighten@paragraph@always{%
