Fixed bug where part problem header repeats if solution is itemize. Fixes #85

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -67,6 +67,7 @@
     \change{Corrected use of the length \dac\ppMarginBelow}
     \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
     \change{Introduced \dac\SolutionsOnly}
+    \change{Fixed bug where part problem header repeats if solution is itemize.}
 \chlogtable
 
 
