--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -113,8 +113,11 @@
 \gdef\exb@pp@lefttag{{\exb@partProblemHeader\Trigger\PartProblemHeaderSuffix}}%
 \fi%
 \bgroup
-\AtNextPar{\exb@pp@lefttag\global\let\exb@pp@lefttag\relax}%
+%:$triggers.=\Trigger\PostPPHeader:\\ Triggers right after the part problem header
+%:$triggers.=has been printed. It is also triggered after the PP header for SolutionsOnly.
+\AtNextPar{\exb@pp@lefttag\global\let\exb@pp@lefttag\relax\Trigger\AfterPPHeader}%
 \ignorespaces}%
+
 \At\EndPartproblem{%
 	% \egroup%
 	\vspace*{\ppMarginBelow}%
