--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -68,6 +68,8 @@
     \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
     \change{Introduced \dac\SolutionsOnly}
     \change{Fixed bug where part problem header repeats if solution is itemize.}
+    \change{Introduced the \dac\rigid command for the \dac\At functionality. Also the \dac\ClearHook for deleting a hook}
+    \change{\dac\buildset now gives error if set does not exist.}
 \chlogtable
 
 
