--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -103,16 +103,16 @@
 \newbox\nobox%
 \bgroup
 \let\exb@partProblemHeader\exbank@opt@partProblemHeader
-\ifexb@b@nextprob@header\relax
-	\global\exb@b@nextprob@headerfalse
-	\addtocounter{partproblemcounter}{-1}
+\ifexb@b@nextprob@header\relax%
+	\global\exb@b@nextprob@headerfalse%
+	\addtocounter{partproblemcounter}{-1}%
 	\let\exb@partProblemHeader\exb@nextprob@header%
-\fi
+\fi%
 \gdef\exb@pp@lefttag{\leavevmode{\smash{\llap{{\exb@prePPHead\exb@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}\exb@postPPHead}}}%
 \else%
 \gdef\exb@pp@lefttag{{\exb@partProblemHeader\Trigger\PartProblemHeaderSuffix}}%
 \fi%
-\bgroup
+\bgroup%
 %:$triggers.=\Trigger\PostPPHeader:\\ Triggers right after the part problem header
 %:$triggers.=has been printed. It is also triggered after the PP header for SolutionsOnly.
 \AtNextPar{\exb@pp@lefttag\global\let\exb@pp@lefttag\relax\Trigger\AfterPPHeader}%
