--- a/src/main.tex
+++ b/src/main.tex
@@ -11,7 +11,7 @@
 \makeset{electro}{capacitance}
 \makeset{first}{firstexercise}
 \makeset{2}{firstexercise, \exclude{secondexercise}{1,2}, thirdexercise}
-\DisplaySolutions
+% \DisplaySolutions
 \begin{document}
   \buildset{electro}
 \end{document}
