Step toward conventionality

--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -113,7 +113,7 @@
 	\Trigger\AtBeginSolutionHard
 	\begingroup
 	\ifexb@DisplaySolutions%
-		\ifexb@DisplayCurrentProblem\isFalse%
+		\ifexb@DisplayCurrentProblem%
 			\global\exb@DisplayCurrentSolutionfalse
 		\fi
 	\fi
