--- a/src/ifs.tex
+++ b/src/ifs.tex
@@ -1,4 +1,5 @@
 %!TEX root = main.tex
+% TODO: check the @b@DisplaySolutions
 \makeatletter
 \def\g@newif#1{%
   \count@\escapechar \escapechar\m@ne
